# testmcp

./: .env.example  .gitignore  ARCHITECTURE_detailed.drawio  README.md  adf_agents.py  adf_tools.py  api.py  debug_output_f72c20d3-86dc-4112-9fc7-7165bf221e9d.json  langgraph.json  main.py  mcp_client.py  pyproject.toml  simple.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
